<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Metro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="str_header">Get Directions</string>
    <string name="str_from">From:</string>
    <string name="str_to">To:</string>
	<string name="str_enter_from_here">Enter From here </string>
	<string name="str_enter_to_here">Enter To here </string>
	<string name="str_fetch_route">Fetch Route</string>
	
	<string name="str_map_load_failed">Failed to load map data from input file</string>
	<string name="str_path_not_found">No valid path found</string>
	<string name="str_place_not_found">Place \"%s\" not found</string>
	<string name="str_summary_entry" formatted="false">Shortest Path: Distance &lt;b>%d kms&lt;/b>, Time &lt;b>%d mins&lt;/b>, and Cost &lt;b>Rs %d&lt;/b></string>
	<string name="str_path_entry" formatted="false">%d: Take a &lt;b>%s&lt;/b> line train at &lt;b>%s&lt;/b> station till &lt;b>%s&lt;/b> station</string>
	<string name="str_last_entry" formatted="false">%d: Take a &lt;b>%s&lt;/b> line train at &lt;b>%s&lt;/b> station to reach &lt;b>%s&lt;/b> station </string>
	
	<string name="next">Next</string>
    <string name="search">Search</string>
    
</resources>
