<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MetroNavigator" >

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:text="@string/str_header" />

    <LinearLayout
        android:id="@+id/from_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_header"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:id="@+id/txt_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:text="@string/str_from" />

        <AutoCompleteTextView
            android:id="@+id/edt_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="left"
            android:maxLines="1"
            android:imeActionLabel="@string/next"
            android:nextFocusDown="@+id/edt_to"
            android:imeOptions="actionNext"
            android:hint="@string/str_enter_from_here" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/to_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/from_header"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:id="@+id/txt_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:maxLines="1"
            android:text="@string/str_to" />

        <AutoCompleteTextView
            android:id="@id/edt_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="left"
            android:maxLines="1"
            android:imeActionLabel="@string/search"
            android:imeOptions="actionSearch"
            android:hint="@string/str_enter_to_here" />
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_fetch_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/to_header"
        android:gravity="center"
        android:text="@string/str_fetch_route" />
        
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_fetch_route"
        android:background="#22996633" >
        <LinearLayout 
            android:id="@+id/content_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
        </ScrollView>

</RelativeLayout>